# claude1

./: .env.example  CLAUDE.md  LICENSE  README.md  goal.txt  pyproject.toml
src/mail_assistant/: __init__.py  cli.py
src/mail_assistant/analysis/: categories.py  classifier.py  llm.py
src/mail_assistant/analysis/prompts/: classifier_system.md
src/mail_assistant/config/: settings.py
src/mail_assistant/google_apis/: auth.py  calendar_client.py  gmail_client.py  scopes.py
src/mail_assistant/store/: classifications.py  db.py  messages.py  models.py  search.py  sync_state.py
src/mail_assistant/store/migrations/: 0001_initial.sql  0002_classifications.sql  __init__.py
src/mail_assistant/sync/: syncer.py
tests/: test_classifier.py  test_no_send.py  test_scopes.py  test_store.py  test_syncer.py
